<?xml version="1.0"?>
<package>
  <name>keyframe_divide</name>
  <version>0.0.0</version>
  <description>The keyframe_divide package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="gary@todo.todo">gary</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>relative_nav_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>relative_nav_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
